--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.whatsapp_plus">
+    package="com.mehulb.whatsapp_direct">
    <application
-        android:label="WhatsApp+"
+        android:label="WhatsAppDirect"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
