--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = whatsapp_plus
+PRODUCT_NAME = whatsapp_direct
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.whatsappPlus
+PRODUCT_BUNDLE_IDENTIFIER = com.mehulb.whatsapp_direct
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2021 com.example. All rights reserved.
